# Parcheggio

./: .gitignore  README.md  package-lock.json
backend-python/: auth.db  main.py  pyproject.toml
backend-python/app/: database.py  models.py
backend-python/app/auth/: router.py  schemas.py  service.py
backend-python/app/parcheggi/: router.py
backend-python/app/prenotazioni/: router.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/components/auth/: RegisterForm.jsx
frontend/pages/: Register.jsx
frontend/services/: mockApi.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/admin/: AdminStats.jsx  ParkingForm.jsx  ParkingTable.jsx
frontend/src/components/auth/: LoginForm.jsx
frontend/src/components/layout/: Header.jsx
frontend/src/components/map/: ParkingMap.jsx
frontend/src/components/user/: AccountSettings.jsx  BookingForm.jsx  BookingList.jsx  EditBookingForm.jsx  ParkingList.jsx
frontend/src/context/: AuthContext.jsx  ThemeContext.jsx
frontend/src/pages/: AdminDashboard.jsx  Login.jsx  Register.jsx  UserDashboard.jsx
frontend/src/services/: api.js  mockApi.js
