[project]
name = "backend-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.7",
    "matplotlib>=3.10.8",
    "mysql-connector-python>=9.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.40.0",
    "sqlalchemy>=2.0.0",
    "email-validator>=2.3.0",
    "uuid6>=2025.0.1",
    "pyjwt>=2.11.0",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.22",
] 
